--- a/src/main/resources/templates/pages/profile.html
+++ b/src/main/resources/templates/pages/profile.html
@@ -20,7 +20,7 @@
                     <a class="nav-link fw-semibold" href="/user/home#consultants">Tư vấn viên</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link fw-semibold" href="/user/home#community">Cộng đồng</a>
+                    <a class="nav-link fw-semibold"  th:href="@{/user/questions}">Cộng đồng</a>
                 </li>
             </ul>
             <th:block th:replace="~{fragments/userDropDown :: userDropdown(
