--- a/src/main/resources/templates/pages/admin/profile.html
+++ b/src/main/resources/templates/pages/admin/profile.html
@@ -3,7 +3,7 @@
         <div class="container py-3">
             <div class="d-flex justify-content-between align-items-center mb-3 border-bottom pb-2">
                 <h1 class="h2">
-                    <i class="fas fa-arrows-rotate me-2"></i>Quản lý Phiên Đăng Nhập
+                    <i class="fas fa-user-circle me-2"></i>My Profile Admin
                 </h1>
             </div>
 
